--- a/src/icons/Curriculum.astro
+++ b/src/icons/Curriculum.astro
@@ -1,9 +1,4 @@
-<svg
-  class={Astro.props.class}
-  height="16"
-  viewBox="0 0 16 16"
-  width="16"
-  style="color: currentcolor;"
+<svg class={Astro.props.class} height="10" viewBox="0 0 16 16" width="10" style="color: currentcolor;"
   ><path
     fill-rule="evenodd"
     clip-rule="evenodd"
