corregida descarga de CV

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,14 +79,14 @@ import Contact from "../components/Contact.tsx";
         </p>
         <div class="relative h-48 w-80">
           <img
-            src="../../public/imgcv.jpg"
+            src="/imgcv.jpg"
             alt="Download my Curriculum Vitae"
             class="absolute inset-0 h-full w-full object-fit rounded-lg opacity-70"
           />
           <div class="absolute inset-0 flex items-center justify-center text-white">
           <a
-              href="../../public/SantiagoMartelli_CV.pdf"
-              download="SantiagoMartelli_CV.pdf"
+              href="/SantiagoMartelli_CV.pdf"
+              download
               class="relative inline-flex items-center justify-center w-full h-full overflow-hidden transition duration-300 ease-out rounded-md group active:border-green-600">
               <span class="absolute flex items-center justify-center text-center text-xl w-full h-full text-black/80 transition-all duration-200 transform group-hover:scale-110 group-hover:text-sky-700 ease">
                 Descargar <br> Curriculum Vitae
