--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,7 +74,7 @@ import Contact from "../components/Contact.tsx";
     <section
       id="social-cv"
       class="mx-auto flex flex-col justify-center items-center w-full pt-20 pb-16 bg-slate-100 overflow-x-hidden">
-      <div class="flex flex-col max-md:mx-4 gap-y-10 items-center">
+      <div class="flex flex-col mx-6 gap-y-10 items-center">
         <p class="text-center text-lg 2xl:text-xl ">
           También puedes encontrarme en mis redes sociales o descargar mi CV
         </p>
@@ -103,7 +103,7 @@ import Contact from "../components/Contact.tsx";
                 href="https://www.linkedin.com/in/santiagomartelli/"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="flex gap-x-2 text-lg items-center">
+                class="flex gap-x-2 text-lg md:text-base items-center">
                 <LinkedIn class="size-4 md:size-5" />
                 <p>LinkedIn</p>
               </a>
@@ -114,7 +114,7 @@ import Contact from "../components/Contact.tsx";
                 href="https://github.com/santimartelli"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="flex gap-x-2 text-lg items-center">
+                class="flex gap-x-2 text-lg md:text-base items-center">
                 <GitHub class="size-4 md:size-5" />
                 <p>GitHub</p>
               </a>
