corregido tamaño texto rrss

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,7 @@ import Contact from "../components/Contact.tsx";
                 href="https://www.linkedin.com/in/santiagomartelli/"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="flex gap-x-2 text-lg md:text-base items-center">
+                class="flex gap-x-2 text-lg md:text-sm items-center">
                 <LinkedIn class="size-4 md:size-5" />
                 <p>LinkedIn</p>
               </a>
@@ -114,7 +114,7 @@ import Contact from "../components/Contact.tsx";
                 href="https://github.com/santimartelli"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="flex gap-x-2 text-lg md:text-base items-center">
+                class="flex gap-x-2 text-lg md:text-sm items-center">
                 <GitHub class="size-4 md:size-5" />
                 <p>GitHub</p>
               </a>
