--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,7 @@ import Contact from "../components/Contact.tsx";
           />
           <div class="absolute inset-0 flex items-center justify-center text-white">
           <a
-              href="/SantiagoMartelli_CV.pdf"
+              href="/CVSantiagoMartelli.pdf"
               download
               class="relative inline-flex items-center justify-center w-full h-full overflow-hidden transition duration-300 ease-out rounded-md group active:border-green-600">
               <span class="absolute flex items-center justify-center text-center text-xl w-full h-full text-black/80 transition-all duration-200 transform group-hover:scale-110 group-hover:text-sky-700 ease">
