Agregada Google Analytics tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,26 +8,29 @@ interface Props {
   description: string;
 }
 
+declare global {
+  interface Window {
+    dataLayer: any[];
+  }
+}
+
 const { description, title } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="es">
   <head>
-    <!-- Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EPFKD35KK1"></script>
     <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s) as HTMLScriptElement,
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        (j as HTMLScriptElement).async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-MVQ2M2VK");
+      window.dataLayer = window.dataLayer || [];
+      function gtag(...args) {
+        window.dataLayer.push(args);
+      }
+      gtag();
+
+      gtag("config", "G-EPFKD35KK1");
     </script>
-    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
@@ -36,15 +39,6 @@ const { description, title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="flex flex-col">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-MVQ2M2VK"
-        height="0"
-        width="0"
-        style="display:none;visibility:hidden"></iframe></noscript
-    >
-    <!-- End Google Tag Manager (noscript) -->
     <slot />
   </body>
 
