--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,15 +21,16 @@ const { description, title } = Astro.props;
 <html lang="es">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EPFKD35KK1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4SEW399N9F"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(...args) {
-        window.dataLayer.push(args);
+        window.dataLayer.push(arguments);
       }
-      gtag();
+      gtag("js", new Date());
 
-      gtag("config", "G-EPFKD35KK1");
+      gtag();
+      gtag("config", "G-4SEW399N9F");
     </script>
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
