--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,9 @@ import Contact from "../components/Contact";
     <Navbar client:load />
 
     <!-- Hero section -->
-    <div id="home" class="absolute top-0"></div>
-    <Hero client:visible />
+    <section id="home" class="relative">
+      <Hero client:visible />
+    </section>
 
     <!-- Divider  -->
     <div class="relative min-h-10 md:min-h-20 overflow-x-hidden">
@@ -32,7 +33,9 @@ import Contact from "../components/Contact";
     </div>
 
     <!-- About me section -->
-    <AboutMe client:visible />
+    <section id="about" class="relative">
+      <AboutMe client:visible />
+    </section>
 
     <!-- Divider  -->
     <div class="relative min-h-10 md:min-h-20 overflow-x-hidden">
@@ -44,7 +47,9 @@ import Contact from "../components/Contact";
     </div>
 
     <!-- Projects section -->
-    <Projects client:visible />
+    <section id="projects" class="relative">
+      <Projects client:visible />
+    </section>
 
     <!-- Divider  -->
     <div class="relative min-h-10 md:min-h-20 overflow-x-hidden">
@@ -56,7 +61,9 @@ import Contact from "../components/Contact";
     </div>
 
     <!-- Skills section -->
-    <Skills client:visible />
+    <section id="skills" class="relative">
+      <Skills client:visible />
+    </section>
 
     <!-- Divider  -->
     <div class="relative min-h-10 md:min-h-20 overflow-x-hidden">
@@ -68,7 +75,9 @@ import Contact from "../components/Contact";
     </div>
 
     <!-- Contact section -->
-    <Contact client:visible />
+    <section id="contact" class="relative">
+      <Contact client:visible />
+    </section>
 
     <!-- Social and CV section -->
     <section
